# pennylane-lightning

./: CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pennylane_lightning/core/simulators/lightning_gpu/catalyst/: CMakeLists.txt
pennylane_lightning/core/simulators/lightning_kokkos/catalyst/: CMakeLists.txt
pennylane_lightning/core/simulators/lightning_qubit/: CMakeLists.txt
pennylane_lightning/core/simulators/lightning_qubit/catalyst/: CMakeLists.txt
pennylane_lightning/core/utils/: BLASLibLoaderManager.hpp  UtilLinearAlg.hpp
scripts/: configure_pyproject_toml.py
